--- a/parckman/index.html
+++ b/parckman/index.html
@@ -524,7 +524,7 @@
       const roads = [
         { x: 3 + 252/2, y: 893 + 216/2, width: 252, height: 216 },
         { x: 237 + 104/2, y: 236 + 1529/2, width: 140, height: 1529 },
-		{ x: 1618 + 40 - 7 + 120/2, y: 237 + 1526/2, width: 120 + 80 - 14, height: 1526 },,
+		{ x: 1618 + 40 - 7 + 120/2, y: 237 + 1526/2, width: 120 + 80 - 14, height: 1526 },
         { x: 257 + 1485/2, y: 234 + 143/2, width: 1485, height: 143 },
         { x: 259 + 1479/2, y: 1622 - 40 + 141/2, width: 1479, height: 221 },
         { x: 257 + 1482/2, y: 872 - 40 + 252/2, width: 1482, height: 332 },
