--- a/parckman/index.html
+++ b/parckman/index.html
@@ -110,16 +110,16 @@
     // Парковочные места
     const upperLeftParkingSpots = [
 		{ x: 361, y: 380 }, { x: 454, y: 380 }, { x: 546, y: 380 }, { x: 641, y: 380 }, { x: 729, y: 380 }, { x: 823, y: 380 },	// 1-й левый верхний ряд 6 мест
-	//	{ x: 361, y: 674 }, { x: 454, y: 674 }, { x: 546, y: 674 }, { x: 641, y: 674 }, { x: 729, y: 674 }, { x: 823, y: 674 }, // 2-й левый верхний ряд 6 мест
-	//	{ x: 361, y: 1130 }, { x: 454, y: 1130 }, { x: 546, y: 1130 }, { x: 641, y: 1130 }, { x: 729, y: 1130 }, { x: 823, y: 1130 }, // 3-й левый верхний ряд 6 мест
-	//	{ x: 361, y: 1420 }, { x: 454, y: 1420 }, { x: 546, y: 1420 }, { x: 641, y: 1420 }, { x: 729, y: 1420 }, { x: 823, y: 1420 } // 4-й левый верхний ряд 6 мест  
+		{ x: 361, y: 674 }, { x: 454, y: 674 }, { x: 546, y: 674 }, { x: 641, y: 674 }, { x: 729, y: 674 }, { x: 823, y: 674 }, // 2-й левый верхний ряд 6 мест
+		{ x: 361, y: 1130 }, { x: 454, y: 1130 }, { x: 546, y: 1130 }, { x: 641, y: 1130 }, { x: 729, y: 1130 }, { x: 823, y: 1130 }, // 3-й левый верхний ряд 6 мест
+		{ x: 361, y: 1420 }, { x: 454, y: 1420 }, { x: 546, y: 1420 }, { x: 641, y: 1420 }, { x: 729, y: 1420 }, { x: 823, y: 1420 } // 4-й левый верхний ряд 6 мест  
     ];
 	
     const upperRightParkingSpots = [
         { x: 1094, y: 380 }, { x: 1189, y: 380 }, { x: 1279, y: 380 }, { x: 1371, y: 380 }, { x: 1462, y: 380 }, { x: 1555, y: 380 }, // 1-й правый верхний ряд 6 мест
-	//	{ x: 1094, y: 674 }, { x: 1189, y: 674 }, { x: 1279, y: 674 }, { x: 1371, y: 674 }, { x: 1462, y: 674 }, { x: 1555, y: 674 }, // 2-й правый верхний ряд 6 мест
-	//	{ x: 1094, y: 1130 }, { x: 1189, y: 1130 }, { x: 1279, y: 1130 }, { x: 1371, y: 1130 }, { x: 1462, y: 1130 }, { x: 1555, y: 1130 }, // 3-й правый нижний ряд 6 мест 
-	//	{ x: 1094, y: 1420 }, { x: 1189, y: 1420 }, { x: 1279, y: 1420 }, { x: 1371, y: 1420 }, { x: 1462, y: 1420 }, { x: 1555, y: 1420 } // 4-й правый нижний ряд 6 мест  
+		{ x: 1094, y: 674 }, { x: 1189, y: 674 }, { x: 1279, y: 674 }, { x: 1371, y: 674 }, { x: 1462, y: 674 }, { x: 1555, y: 674 }, // 2-й правый верхний ряд 6 мест
+		{ x: 1094, y: 1130 }, { x: 1189, y: 1130 }, { x: 1279, y: 1130 }, { x: 1371, y: 1130 }, { x: 1462, y: 1130 }, { x: 1555, y: 1130 }, // 3-й правый нижний ряд 6 мест 
+		{ x: 1094, y: 1420 }, { x: 1189, y: 1420 }, { x: 1279, y: 1420 }, { x: 1371, y: 1420 }, { x: 1462, y: 1420 }, { x: 1555, y: 1420 } // 4-й правый нижний ряд 6 мест  
     ];
 	
     const allParkingSpots = [...upperLeftParkingSpots, ...upperRightParkingSpots];
@@ -146,7 +146,136 @@
           { x, y: y - 62 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
         ];
       },
-	  
+      // 3. Верхняя половина по часовой стрелке
+      function upperHalfClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 37 }, { x, y: y - 37 },
+          { x: 690 - npcOffset, y: y - 37 }, { x: 690 - npcOffset, y: 370 },
+          { x: 110 + npcOffset, y: 370 }, { x: 110 + npcOffset, y: y - 37 },
+          { x, y: y - 37 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },
+      // 4. Верхняя половина против часовой стрелки
+      function upperHalfCounterClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 62 }, { x, y: y - 62 },
+          { x: 82 + npcOffset, y: y - 62 }, { x: 82 + npcOffset, y: 405 },
+          { x: 725 - npcOffset, y: 405 }, { x: 725 - npcOffset, y: y - 62 },
+          { x, y: y - 62 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },	  
+      // 5. Левая верхняя четверть по часовой стрелке
+      function leftHalfClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 37 }, { x, y: y - 37 },
+          { x: 390 - npcOffset, y: y - 37 }, { x: 390 - npcOffset, y: 360 },
+          { x: 110 + npcOffset, y: 360 }, { x: 110 + npcOffset, y: y - 37 },
+          { x, y: y - 37 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },
+      // 6. Левая верхняя четверть против часовой стрелки
+      function leftHalfCounterClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 62 }, { x, y: y - 62 },
+          { x: 82 + npcOffset, y: y - 62 }, { x: 82 + npcOffset, y: 390 },
+          { x: 395, y: 390 }, { x: 395, y: y - 62 },
+          { x, y: y - 62 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },
+      // 7. Правая половина по часовой стрелке
+      function rightHalfClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 37 }, { x, y: y - 37 },
+          { x: 690 - npcOffset, y: y - 37 }, { x: 690 - npcOffset, y: 665 - npcOffset },
+          { x: 420, y: 665 - npcOffset }, { x: 420, y: y - 37 },
+          { x, y: y - 37 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },
+      // 10. Правая половина против часовой стрелки
+      function rightHalfCounterClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 62 }, { x, y: y - 62 },
+          { x: 395, y: y - 62 }, { x: 395, y: 710 - npcOffset },
+          { x: 725 - npcOffset, y: 710 - npcOffset }, { x: 725 - npcOffset, y: y - 62 },
+          { x, y: y - 62 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },
+      // 8. Правая верхняя четверть по часовой стрелке
+      function rightUpperQuarterClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 37 }, { x, y: y - 37 },
+          { x: 690 - npcOffset, y: y - 37 }, { x: 690 - npcOffset, y: 370 },
+          { x: 420, y: 370 }, { x: 420, y: y - 37 },
+          { x, y: y - 37 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },
+      // 9. Правая верхняя четверть против часовой стрелки
+      function rightUpperQuarterCounterClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 62 }, { x, y: y - 62 },
+          { x: 394, y: y - 62 }, { x: 394, y: 400 },
+          { x: 725 - npcOffset, y: 400 }, { x: 725 - npcOffset, y: y - 62 },
+          { x, y: y - 62 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },	  
+      // 11. Правая верхняя малая половина по часовой стрелке
+      function leftUpperSmallClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 37 }, { x, y: y - 37 },
+          { x: 690 - npcOffset, y: y - 37 }, { x: 690 - npcOffset, y: 220 },
+          { x: 420, y: 220 }, { x: 420, y: y - 37 },
+          { x, y: y - 37 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },
+      //11.1 Правая верхняя малая половина против часовой стрелки
+      function rightUpperQuarterCounterClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 62 }, { x, y: y - 62 },
+          { x: 394, y: y - 62 }, { x: 394, y: 245 },
+          { x: 725 - npcOffset, y: 245 }, { x: 725 - npcOffset, y: y - 62 },
+          { x, y: y - 62 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },
+     // 12. Левая верхняя малая половина по часовой стрелке
+      function rightUpperHalfClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 37 }, { x, y: y - 37 },
+          { x: 390 - npcOffset, y: y - 37 }, { x: 390 - npcOffset, y: 220 },
+          { x: 110 + npcOffset, y: 220 }, { x: 110 + npcOffset, y: y - 37 },
+          { x, y: y - 37 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },
+      // 12.1 Левая верхняя малая половина против часовой стрелки
+      function leftSmallCounterClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 62 }, { x, y: y - 62 },
+          { x: 82 + npcOffset, y: y - 62 }, { x: 82 + npcOffset, y: 245 },
+          { x: 399, y: 245 }, { x: 399, y: y - 62 },
+          { x, y: y - 62 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      },	  
+      // 13. Левая половина против часовой стрелки
+      function leftSmallCounterClockwiseRoute(spot) {
+        const { x, y } = scaleCoords(spot.x, spot.y);
+        return [
+          { x, y }, { x, y: y - 62 }, { x, y: y - 62 },
+          { x: 82 + npcOffset, y: y - 62 }, { x: 82 + npcOffset, y: 710 - npcOffset },
+          { x: 399, y: 710 - npcOffset }, { x: 399, y: y - 62 },
+          { x, y: y - 62 }, { x, y: y - 20 }, { x, y: y - 10 }, { x, y }
+        ];
+      }	  
     ];
 
     // Глобальные переменные
