--- a/parckman/index.html
+++ b/parckman/index.html
@@ -64,7 +64,7 @@
 
     // Конфигурация сенсоров
     const npcSensors = {
-      front: { width: 17, height: 15, offset: 17, angle: 0 },
+      front: { width: 50, height: 15, offset: 30, angle: 0 },
       frontLeft: { width: 5, height: 5, offset: 5, angle: Math.PI/4 },
       frontRight: { width: 5, height: 5, offset: 5, angle: -Math.PI/4 },
       left: { width: 10, height: 15, offset: 5, angle: Math.PI/2 },
@@ -594,7 +594,7 @@
             scaleCoords(spot.x, spot.y).y,
             'npcCar'
           )
-          .setScale(0.40) //0.47
+          .setScale(0.47)
           .setDepth(3)
           .setCollideWorldBounds(false);
 
