--- a/parckman/index.html
+++ b/parckman/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parking Rush с улучшенной системой столкновений</title>
+  <title>Parking Rush с эффектом аннигиляции</title>
   <style>
     body, html {
       margin: 0;
@@ -16,6 +16,7 @@
       background-color: #000;
     }
     #game-container {
+      position: relative;
       display: block;
       max-width: 100%;
       max-height: 100%;
@@ -39,9 +40,11 @@
       pointer-events: none;
       transform: translate(-50%, -50%);
       animation: fadeOut 0.5s forwards;
+      z-index: 50;
     }
     @keyframes fadeOut {
-      to { transform: translate(-50%, -50%) scale(2); opacity: 0; }
+      0% { transform: translate(-50%, -50%) scale(0.5); opacity: 1; }
+      100% { transform: translate(-50%, -50%) scale(2); opacity: 0; }
     }
   </style>
   <script src="https://cdn.jsdelivr.net/npm/phaser@3/dist/phaser.min.js"></script>
@@ -776,7 +779,7 @@
             scaleCoords(spot.x, spot.y).y,
             'npcCar'
           )
-          .setScale(0.43)
+          .setScale(0.425)
           .setDepth(3)
           .setCollideWorldBounds(false);
 
