--- a/parckman/index.html
+++ b/parckman/index.html
@@ -877,7 +877,7 @@
 		  .setCollideWorldBounds(false);
 
 		  // Настройка физического тела
-		  npc.body.setSize(15, 35);
+		  npc.body.setSize(5, 25); // 15, 35
 		  npc.body.setOffset(0, 5);
 
 		  createSensors(scene, npc);
@@ -912,7 +912,7 @@
 		  // Мягкое отталкивание
 		  const angle = Phaser.Math.Angle.Between(npc1.x, npc1.y, npc2.x, npc2.y);
 		  const distance = Phaser.Math.Distance.Between(npc1.x, npc1.y, npc2.x, npc2.y);
-		  const minDistance = 10;
+		  const minDistance = 7;
 		  
 		  if (distance < minDistance) {
 			const pushForce = 0.7 * (minDistance - distance);
