--- a/parckman/index.html
+++ b/parckman/index.html
@@ -772,6 +772,11 @@
 	  this.load.image('lamp_top', 'assets/lamp_top.png');
 	  this.load.image('lamp_bottom', 'assets/lamp_bottom.png');
 	  this.load.atlas('flares', 'assets/particles/flares.png', 'assets/particles/flares.json');
+	  this.load.image('bush2', 'assets/bush1.png');
+	  this.load.image('bush3', 'assets/bush1.png');
+	  this.load.image('bush4', 'assets/bush1.png');
+	  this.load.image('bush5', 'assets/bush1.png');
+	  this.load.image('house1', 'assets/house1.png');	  
 
 	  // Загрузка всех вариантов машин
 	  const models = ['sedan', 'suv', 'hatchback', 'coupe', 'van'];
@@ -799,6 +804,7 @@
       const treeOffsetX = 45, treeOffsetY = 35;
       const bushOffsetX = 35, bushOffsetY = 25;
       const oilOffsetX = 15, oilOffsetY = 23;
+	  const houseOffsetX = 40, houseOffsetY = 30;
 
       const lampTopCoords = scaleCoords(850+90, 223+170);
       const lampBottomCoords = scaleCoords(854+90, 1650-140);
@@ -807,6 +813,12 @@
       const tree2Coords = scaleCoords(100 + 10, 900 - 300);
       const bush1Coords = scaleCoords(1716 + bushOffsetX, 298 + bushOffsetY);
       const oilCoords = scaleCoords(25 + oilOffsetX, 938 + oilOffsetY);
+	  
+	  const bush2Coords = scaleCoords(1500 + bushOffsetX, 70 + bushOffsetY);
+	  const bush3Coords = scaleCoords(100 + bushOffsetX, 1050 + bushOffsetY); 
+	  const bush4Coords = scaleCoords(120 + bushOffsetX, 1150 + bushOffsetY);
+	  const bush5Coords = scaleCoords(120 + bushOffsetX, 1400 + bushOffsetY);
+	  const house1Coords = scaleCoords(1800 + houseOffsetX, 938 + houseOffsetY);  
 
       const lampTop = scene.add.image(lampTopCoords.x, lampTopCoords.y, 'lamp_top').setScale(0.5);
       const lampBottom = scene.add.image(lampBottomCoords.x, lampBottomCoords.y, 'lamp_bottom').setScale(0.5);
@@ -815,6 +827,12 @@
       const tree2 = scene.add.image(tree2Coords.x, tree2Coords.y, 'tree2').setScale(0.4);
       const bush1 = scene.add.image(bush1Coords.x, bush1Coords.y, 'bush1').setScale(0.5);
       const oil = scene.add.image(oilCoords.x, oilCoords.y, 'oil').setScale(0.5);
+	  
+	  const bush2 = scene.add.image(bush2Coords.x, bush2Coords.y, 'bush2').setScale(0.5);
+	  const bush3 = scene.add.image(bush3Coords.x, bush3Coords.y, 'bush3').setScale(0.5);
+	  const bush4 = scene.add.image(bush4Coords.x, bush4Coords.y, 'bush4').setScale(0.5); 
+	  const bush5 = scene.add.image(bush5Coords.x, bush5Coords.y, 'bush5').setScale(0.5);	
+	  const house1 = scene.add.image(house1Coords.x, house1Coords.y, 'house1').setScale(0.5);	  
 
       lampTop.setDepth(11);
       lampBottom.setDepth(11);
@@ -823,6 +841,11 @@
       tree2.setDepth(10);
       bush1.setDepth(10);
       oil.setDepth(0);
+	  bush2.setDepth(10);
+	  bush3.setDepth(10);
+	  bush4.setDepth(10);
+	  bush5.setDepth(10);
+	  house1.setDepth(10);	  
     }
 
 	function create() {
